[project]
name = "my-health-record-downloader"
version = "0.1.0"
description = "Bulk download PDF medical records from Australian My Health Record portal"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "playwright>=1.58.0",
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
markers = [
    "e2e: end-to-end tests against real services (deselect with '-m not e2e')",
    "integration: integration tests requiring real credentials (deselect with '-m not integration')",
]
addopts = "-m 'not e2e and not integration'"
